<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/previous_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prev_image"
            android:background="@android:color/holo_blue_bright"
            android:onClick="choosePrevImage"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/next_image"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/detect_text"/>
    <Button
            android:text="@string/detect_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detect_text"
            android:background="@android:color/holo_blue_bright"
            android:onClick="runDetector"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="12dp" app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="365dp"
            android:layout_height="439dp" tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:id="@+id/imageView2"
            android:src="@drawable/image_1"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/desc"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/mlAPIList" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/det_lang"/>
    <Button
            android:text="@string/next_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next_image"
            android:background="@android:color/holo_blue_bright"
            android:onClick="chooseNextImage"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:text="@string/detected_text"
            android:layout_width="379dp"
            android:layout_height="94dp"
            android:id="@+id/detected_text"
            android:scrollbars="vertical"
            android:background="@color/colorPrimary"
            android:textStyle="bold" android:textSize="16sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Spinner
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Spinner.DropDown"
            android:id="@+id/mlAPIList"
            android:entries="@array/mlmodel" android:spinnerMode="dropdown"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/prev_image"
            android:visibility="visible" android:popupBackground="@color/colorPrimary"/>
    <TextView
            android:text="Language"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:background="@android:color/holo_blue_bright"
            android:id="@+id/det_lang"
            android:visibility="visible"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/detected_text" android:textAlignment="center"/>


</android.support.constraint.ConstraintLayout>